# ambient-temperature-estimation

./: .gitignore  CMakeLists.txt  README.md
data/: long_chamber_data.csv
src/apis/: optimizer_api.cpp
src/apis/python/: .gitignore  README.md  clean.sh  python_wrapper.cpp  rebuild.sh  setup.py  test.py  test_large.py
src/apis/python/examples/: calibration.ipynb  model_derivation.ipynb  prediction.ipynb
src/headers/: objective_functions.h  optimizer.h  optimizer_api.h  optimizer_types.h  utils.h
src/models/: base_model_predict.h  base_model_train.h
src/optimizer/: optimizer_data_buffer.cpp  optimizer_fitting.cpp  optimizer_objective_functions.cpp  optimizer_solver.cpp
src/test/: smoke_test_predict.cpp  smoke_test_train.cpp
src/util/: utils.cpp
